# jsonschema2nixopts

./: Cargo.toml  README.md
src/: main.rs
